# tamca

./: CMakeLists.txt  LICENSE  PKGBUILD  README  gtamca.c  tamca
